<resources>
    <!--<string name="app_ip">192.168.0.109</string>-->
    <string name="app_ip">115.28.105.121</string>
    <string name="app_port">3010</string>
    <string name="app_version_code">10000</string>
    <string name="app_name">沃纳助手·窗帘·商户版</string>

    <!--协议界面-->
    <string name="yes">同意</string>
    <string name="out">拒绝</string>
    <string name="mama_tel">tel://02986266736</string>

    <!--个人信息界面-->
    <string name="get_sn">获取激活码</string>
    <string name="sn">账户激活</string>
    <string name="out_user">退出当前账号</string>

    <!--提交订单界面-->
    <string name="customer_name">客户姓名</string>
    <string name="customer_tel">客户电话</string>
    <string name="customer_address">客户地址</string>
    <string name="customer_time">预约时间</string>
    <string name="appoint_worker">预约时间</string>
    <string name="add_curtain">添加窗帘</string>
    <string name="read_order">查看订单</string>
    <string name="up_order">确认落单</string>
    <string name="que_ren_tian_jia">确认添加</string>
    <string name="li_shi_ding_dan">历史订单</string>

    <!--查看订单界面-->
    <string name="new_order_label">待受理</string>
    <string name="now_order_label">已受理</string>
    <string name="old_order_label">已完成</string>

    <!--客服电话-->
    <string name="hotline1">18591955708</string>
    <string name="hotline2">18591955708</string>
    <string name="hotline3">18591955708</string>

    <!--用户协议标题-->
    <string name="user_agreement_label">沃纳助手用户协议</string>
    <!--用户协议-->
    <string name="user_agreement">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;欢迎访问沃纳科技网站www. walnut.com及使用相应的手机应用软件（下称“沃纳助手”），使用沃纳助手提供的产品及服务。沃纳助手的产品和服务由西安沃纳科技信息技术有限公司基于以下服务条款及使用条件而提供，请您仔细阅读本协议后再进行注册和使用沃纳助手的产品和服务。本协议在您同意注册时生效，将成为您和沃纳助手之间具有法律效力的文件，您和沃纳助手将同时受到本协议条款的约束。\n
        \n1.&#160;&#160;沃纳助手软件\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;您需要下载沃纳助手提供的手机软件并安装后方可从手机客户端使用沃纳助手所提供的服务。沃纳助手在此授予您有偿的、不可转让的、非独占的全球性个人许可，允许您使用由沃纳助手提供的包含在服务中的软件。但是，您不得复制、修改、发布、出售或出租沃纳助手的服务或所含软件的任何部分，也不得进行反向工程或试图提取该软件的源代码，除非法律禁止上述限制或您已获得沃纳助手的书面许可。\n
        \n2.&#160;&#160;沃纳助手帐户\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;沃纳助手提供服务的特点决定您需要先成为其注册用户，才能接受产品服务，您根据提示流程注册即可。请妥善保管您的帐户并维护账户的安全保密性，非因沃纳助手原因导致您个人账户信息外漏而产生损失，沃纳助手概不承担责任。沃纳助手会尽最大努力对其获取的用户个人信息进行妥善保管，除征得用户明确同意和法律明确规定外，沃纳助手不会向任何第三方提供用户前述信息。如果您未满18周岁，请您在父母或监护人的参与下使用服务。沃纳助手保留因业务发展等原因自行决定终止提供服务、关闭帐户、删除或编辑内容或取消订单的权利。\n
        \n3.&#160;&#160;沃纳助手服务\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;用户应了解并知悉，沃纳助手是为安装服务提供方和安装服务需求方提供信息交换的技术服务平台。用户与安装服务提供者通过沃纳助手的居间服务，在双方之间达成独立的安装服务协议，并承担相应的权利和义务。如因安装服务提供者原因导致用户遭受相关财产及人身损害的，用户应直接向安装服务提供者追偿，沃纳助手免于承担因安装服务提供者与用户之间的安装服务协议履行所致任何纠纷的赔偿责任。\n
        \n4.&#160;&#160;沃纳助手订单\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;本条款所述“服务订单”，是指沃纳助手接受用户委托，承诺按照用户具体需求访寻相应的安装服务提供者，沃纳助手与用户达成安装服务协议的委托服务合同。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;4.1&#160;&#160;服务订单的成立以安装服务提供者和用户分别收到沃纳助手平台发送的订单确认信息为准，双方订单临时变更等情形的处理详见与具体达成的安装服务协议。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;4.2&#160;&#160;服务订单成立后安装服务提供者即与用户之间形成服务关系达成服务合同，沃纳助手与用户之间的委托服务协议终止。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;4.3&#160;&#160;安装服务提供者履行完毕其与用户达成的服务合同后，用户应当按照双方之间达成的服务协议支付服务价款。用户可作出相应的评价，以供沃纳助手进一步改进服务。\n
        \n5.&#160;&#160;信息发布\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;5.1&#160;&#160;为更好的促成服务协议达成，沃纳助手会将劳务提供者相关信息发布在服务平台。沃纳助手承诺会对其基本信息（身份证、技能证等）进行初步审查但不保证信息的真实、可靠、完整性。如您发现信息不一致可以通过客户或服务评价体系通知沃纳助手，沃纳助手将即使做出修改补充。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;5.2&#160;&#160;用户可以在沃纳助手服务平台张贴评论、提出建议、意见等，但其内容不得违反中国现行法律法规及其他规范性文件的要求，不含有非法、淫秽、威胁、诽谤、侵犯隐私、侵犯知识产权或以其他形式对第三方权利构成侵犯。沃纳助手保留清除或编辑这些内容的权利（但非义务），但不对用户所张贴的内容进行经常性的审查。用户声明和保证对于因其所提供内容引起的对沃纳助手的损害进行赔偿。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;5.3&#160;&#160;如果用户在沃纳助手张贴内容或提交材料，除该内容材料中明确禁止，则视为用户同意授予沃纳助手非独有的、免费的、永久的、不可撤销的和完全的再许可权的下述许可：在全世界范围内任何媒体上使用、转载、修改、改编、出版、翻译、创作衍生作品、分发和展示这些内容。\n
        \n6.&#160;&#160;服务的修改和终止\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;沃纳助手始终在不断更改和改进其所提供的服务。沃纳助手可能会增加或删除某项服务功能，也可能暂停或彻底停止某项服务。用户可以随时停止使用沃纳助手的服务，沃纳助手也可能随时停止向用户提供服务，或随时对沃纳助手的服务增加或设置新的限制。沃纳助手在修改或终止服务前会通过相关途径提示用户，建议及时关注沃纳助手动态。如用户存在违反国家法律法规规章制度行为，或违反其在本服务条款及使用条件中的行为规范的，沃纳助手有权随时终止向用户提供所述服务。\n
        \n7.&#160;&#160;有限责任\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;沃纳助手负责按"现状"和"可得到"的状态向您提供服务。但沃纳助手服务不作任何明示或暗示的保证，包括但不限于沃纳助手服务的适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，沃纳助手也不对其服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。\n
    </string>


    <string name="login_but_text">登陆\n立即注册</string>
</resources>
