<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDiSe">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorfont" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_agreement_label"
            android:id="@+id/label_tv"
            android:textColor="@color/colorWhite"
            android:singleLine="true"
            android:gravity="center"
            style="@style/label_fout_base" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/label_fout_base"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/user_agreement"
                android:id="@+id/textView44"
                android:textColor="@color/colorGreen"
                android:singleLine="false"
                android:gravity="fill_horizontal"
                android:background="@color/colorAlpha1"
                android:padding="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:id="@+id/out_but"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colortab2"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/yes_but"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@color/colortab1"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>