<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDiSe"
    android:divider="@drawable/icon_line2"
    android:showDividers="middle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/new_order_sv"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/new_order_sv_ll"
                android:background="@color/colorAlpha1">

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/now_order_sv"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:longClickable="true"
            android:background="@color/colorWhite"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/now_order_sv_ll"
                android:background="@color/colorAlpha1">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:id="@+id/old_order_sv"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:longClickable="true"
            android:background="@color/colorWhite"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/old_order_sv_ll"
                android:background="@color/colorAlpha1">

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:id="@+id/curtain_wait_rl">

            <ImageView
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:id="@+id/imageView8"
                android:background="@drawable/icon_order3"
                android:contentDescription=""
                android:layout_marginTop="115dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/curtain_wait_info"
                android:text="目前没有找到您的窗帘账单"
                android:layout_below="@+id/imageView8"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/cityFont" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_order_label"
            android:id="@+id/order_new"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@color/colortab1"
            android:foregroundGravity="center|clip_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/now_order_label"
            android:id="@+id/order_now"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@color/colortab2"
            android:foregroundGravity="center|clip_vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/old_order_label"
            android:id="@+id/order_old"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@color/colortab2"
            android:foregroundGravity="center|clip_vertical" />

    </LinearLayout>

</LinearLayout>