<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDiSe">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/icon_back1"
            android:id="@+id/relativeLayout2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/textView11"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="#47030303"
                android:id="@+id/linearLayout7">

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/break_img_but"
                    android:background="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView46"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_below="@+id/linearLayout7"
                    android:layout_toRightOf="@+id/imageView22"
                    android:layout_toEndOf="@+id/imageView22"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout7"
                android:background="#28030303">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:id="@+id/imageView22"
                    android:background="@drawable/icon_curtain2"
                    android:layout_below="@+id/linearLayout7"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/user_name_ll"
                    android:visibility="gone">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imageView22"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:id="@+id/linearLayout10"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/login_tv"
                            android:textColor="@color/colorWhite"
                            android:textSize="25dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center"
                            android:text="00000000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="用户编码:"
                            android:id="@+id/textView38"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:layout_below="@+id/linearLayout10"
                            android:layout_alignLeft="@+id/linearLayout10"
                            android:layout_alignStart="@+id/linearLayout10"
                            android:layout_marginTop="5dp"
                            android:gravity="top|left|center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/user_id_tv"
                            android:textColor="@color/colorWhite"
                            android:textSize="16dp"
                            android:layout_alignTop="@+id/textView38"
                            android:layout_toRightOf="@+id/textView38"
                            android:layout_toEndOf="@+id/textView38"
                            android:layout_marginLeft="10dp"
                            android:gravity="top|left|center"
                            android:text="4646465456"
                            android:layout_marginTop="5dp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="点击登陆"
                    android:id="@+id/login_but"
                    android:textColor="@color/colorWhite"
                    android:textSize="40sp"
                    android:background="@color/colorAlpha1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle|end"
            android:id="@+id/linearLayout11"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_layout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_free"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/get_sn_user_et"
                    android:layout_weight="1"
                    android:textColor="@color/colorfont"
                    android:textColorHint="@color/colorfont"
                    android:hint="输入所需激活码的账号"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/colorAlpha1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/get_sn"
                    android:id="@+id/get_sn_but"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_button1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_free"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/get_sn_et"
                    android:layout_weight="1"
                    android:textColor="@color/colorfont"
                    android:textColorHint="@color/colorfont"
                    android:hint="输入已有的激活码"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/colorAlpha1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/sn"
                    android:id="@+id/sn_but"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:background="@drawable/shape_button1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:showDividers="middle|end"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_free">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="联系客服："
                        android:id="@+id/textView40"
                        android:textColor="@color/colorfont"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/cus_hotline_1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/icon_client5" />

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/cus_hotline_2"
                        android:background="@drawable/icon_client5"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp" />

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/cus_hotline_3"
                        android:background="@drawable/icon_client5"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_free"
                    android:layout_marginBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="联系邮箱："
                        android:id="@+id/textView41"
                        android:textColor="@color/colorfont"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:layout_marginLeft="16dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/out_user"
            android:background="@drawable/shape_button1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:id="@+id/out_login_but"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout12"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/about_us_app_version_tv"
                android:textColor="@color/colorfont"
                android:textSize="16dp"
                android:text="dfgdsfgsfgs"
                android:gravity="center"
                android:layout_gravity="center_vertical|bottom" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>